# AviSynthPlus-BlurDetect

./: CMakeLists.txt  README.md
msvc/: BlurDetect.sln  BlurDetect.vcxproj  BlurDetect.vcxproj.filters
src/: blurdetect.cpp  blurdetect.rc
